Add prebuild script for psycopg2 dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ Thumbs.db
 
 *.pyo
 *.pyd
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
