Switch to SQLite for AWS deployment

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -1,5 +1,3 @@
-packages:
-  yum:
-    postgresql-devel: []
-    gcc: []
-    python3-devel: []
+option_settings:
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: StudyTracker.wsgi:application
