--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -1,3 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: StudyTracker.wsgi:application
+    WSGIPath: DjangoStudyTracker.wsgi:application
